<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GroupsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/createGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false"
            app:contentPadding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:text="@string/createGroup"
                android:textSize="28sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joinGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false"
            android:layout_marginBottom="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:lines="1"
                    android:text="@string/joinGroup"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/joinCode"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/joinCode"
                            android:inputType="textShortMessage"
                            android:lines="1"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/validate_join_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:text="Valider" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_groups"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</FrameLayout>